<resources>
    <string name="app_name">Trip Application</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="ok_">Ok</string>
    <string name="continue_">Continue</string>
    <string name="login">Login</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="description">Description</string>
    <string name="cost">Cost</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_place">Add Place</string>
    <string name="places">Places</string>
    <string name="search">Search Place</string>
    <string name="google_map_keys">AIzaSyDYV6bLMCVrf9WDiTaRMa0WygB2xox_WYM</string>

</resources>